# clarity

./: .buildinfo  .codacy.yaml  .coveragerc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .pylintrc  .pylintrc.precommit.ini  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONTRIBUTING.html  LICENSE  README.md  amplification.html  api.html  clarity.data.HOA_tools_cec2.html  clarity.data.demo_data.html  clarity.data.html  clarity.data.scene_builder_cec2.html  clarity.data.scene_renderer_cec1.html  clarity.data.scene_renderer_cec2.html  clarity.data.utils.html  clarity.engine.html  clarity.engine.losses.html  clarity.engine.system.html  clarity.enhancer.compressor.html  clarity.enhancer.dnn.html  clarity.enhancer.dnn.mc_conv_tasnet.html  clarity.enhancer.dsp.filter.html  clarity.enhancer.dsp.html  clarity.enhancer.gha.audiogram.html  clarity.enhancer.gha.gainrule_camfit.html  clarity.enhancer.gha.gha_interface.html  clarity.enhancer.gha.gha_utils.html  clarity.enhancer.gha.html  clarity.enhancer.html  clarity.enhancer.multiband_compressor.compressor_qmul.html  (+187 more)
.doctrees/: amplification.doctree  api.doctree  environment.pickle  index.doctree  install.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  challenge-question.md  feature_request.md  question.md  questions-about-the-challenge.md
.github/workflows/: ORDA.yaml  docs-preview.yml  lint.yml  pypi-test.yaml  pypi.yaml  python-app.yml  run_tests.yml  sphinx_docs_to_gh_pages.yaml  sphinx_docx_to_gh_pages.yaml  test.yml
_modules/: index.html
_modules/tests/: conftest.html  test_import.html  test_scene_renderer_cec2.html
_sources/: CONTRIBUTING.md.txt  amplification.rst.txt  clarity.data.HOA_tools_cec2.rst.txt  clarity.data.rst.txt  clarity.data.scene_builder_cec2.rst.txt  clarity.data.scene_renderer_cec2.rst.txt  clarity.data.utils.rst.txt  clarity.engine.losses.rst.txt  clarity.engine.rst.txt  clarity.engine.system.rst.txt  clarity.enhancer.compressor.rst.txt  clarity.enhancer.dnn.rst.txt  clarity.enhancer.dsp.filter.rst.txt  clarity.enhancer.gha.audiogram.rst.txt  clarity.enhancer.gha.gha_interface.rst.txt  clarity.enhancer.gha.gha_utils.rst.txt  clarity.enhancer.gha.rst.txt  clarity.enhancer.nalr.rst.txt  clarity.enhancer.rst.txt  clarity.evaluator.haaqi.haaqi.rst.txt  clarity.evaluator.haaqi.rst.txt  clarity.evaluator.haspi.eb.rst.txt  clarity.evaluator.haspi.ebm.rst.txt  clarity.evaluator.haspi.ip.rst.txt  clarity.evaluator.hasqi.hasqi.rst.txt  clarity.evaluator.hasqi.rst.txt  clarity.evaluator.msbg.msbg_hparams.rst.txt  clarity.evaluator.msbg.msbg_utils.rst.txt  clarity.evaluator.msbg.rst.txt  clarity.evaluator.msbg.smearing.rst.txt  clarity.evaluator.rst.txt  clarity.predictor.rst.txt  clarity.rst.txt  clarity.utils.audiogram.rst.txt  clarity.utils.file_io.rst.txt  clarity.utils.rst.txt  index.rst.txt  modules.rst.txt  recipes.cad1.task1.baseline.evaluate.rst.txt  recipes.cad1.task1.baseline.test.rst.txt  (+63 more)
_static/: Makefile  clarity.data.demo_data.rst  clarity.data.rst  clarity.data.scene_renderer_cec1.rst  clarity.engine.rst  clarity.enhancer.dnn.mc_conv_tasnet.rst  clarity.enhancer.dnn.rst  clarity.enhancer.dsp.rst  clarity.enhancer.gha.gainrule_camfit.rst  clarity.enhancer.gha.rst  clarity.enhancer.multiband_compressor.compressor_qmul.rst  clarity.enhancer.multiband_compressor.crossover.rst  clarity.enhancer.multiband_compressor.multiband_compressor.rst  clarity.enhancer.multiband_compressor.rst  clarity.enhancer.rst  clarity.evaluator.haaqi.rst  clarity.evaluator.haspi.haspi.rst  clarity.evaluator.haspi.rst  clarity.evaluator.hasqi.rst  clarity.evaluator.mbstoi.mbstoi.rst  clarity.evaluator.mbstoi.mbstoi_utils.rst  clarity.evaluator.mbstoi.rst  clarity.evaluator.msbg.audiogram.rst  clarity.evaluator.msbg.cochlea.rst  clarity.evaluator.msbg.msbg.rst  clarity.evaluator.msbg.rst  clarity.evaluator.rst  clarity.predictor.rst  clarity.predictor.torch_msbg.rst  clarity.predictor.torch_stoi.rst  clarity.rst  clarity.utils.car_noise_simulator.carnoise_parameters_generator.rst  clarity.utils.car_noise_simulator.carnoise_signal_generator.rst  clarity.utils.car_noise_simulator.rst  clarity.utils.flac_encoder.rst  clarity.utils.results_support.rst  clarity.utils.signal_processing.rst  clarity.utils.source_separation_support.rst  documentation_options.js  index.md  (+71 more)
clarity/: __init__.py  _version.py
clarity/data/: HOA_tools_cec2.py  demo_data.py  scene_builder_cec2.py  scene_renderer_cec1.py  scene_renderer_cec2.py  scene_renderer_cec3.py  utils.py
clarity/dataset/: cec1_dataset.py
clarity/engine/: losses.py  system.py
clarity/enhancer/: compressor.py  nalr.py
clarity/predictor/: check_pyHaqqi.py  torch_haaqi.py  torch_msbg.py  torch_stoi.py
clarity/utils/: __init__.py  audiogram.py  file_io.py  filterbanks.py  flac_encoder.py  results_support.py  signal_processing.py  source_separation.py  source_separation_support.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  _generated_menus.rst  amplification.rst  api.rst  code_of_conduct.md  conf.py  contributing.md  docs_config.json  gen_menu.py  gen_recipes.py  gen_recipes_.py  generate_full_docs.py  index.md  index.rst  installation.md  introduction.md  recipe_rsync_exclude.txt  recipes_doc.md  requirements.txt  usage.md
docs/_static/: custom.css
docs/source/: conf.py  evaluator.rst  install.rst
notebooks/: 01_Installing_clarity_tools_and_using_metadata.ipynb  02_Running_the_CEC2_baseline_from_commandline.ipynb  03_Running_the_CEC2_baseline_from_python.ipynb  Baseline_HASPI_scores.ipynb  Installing_clarity_tools_and_using_metadata.ipynb  README.md
recipes/cad1/: README.html  README.md
recipes/cad2/: README.html  README.md
recipes/cad_icassp_2026/: README.html  README.md
recipes/cadenza1/: README.md
recipes/cec1/: README.html  README.md
recipes/cec2/: README.html  README.md
recipes/cec3/: README.html  README.md
recipes/clip2/: README.html  README.md
tests/: conftest.py  test_compressor.py  test_full_pipeline.py  test_import.py  test_scene_renderer_cec2.py  testutils.py
(+708 files in other folders)
