[metadata]
name = pyclarity
# FIXME : How to get version automatically and work with tagging releases on GitHub
version = 2.0.3
description = Tools for the Clarity Challenge
long_description = file: README.md,
long_description_content_type = text/markdown
author = The PyClarity team
author_email = clarity-group@sheffield.ac.uk
url = https://github.com/claritychallenge/clarity
project_urls=
  Bug Tracker = https://github.com/claritychallenge/clarity/issues
  Documentation = https://claritychallenge.github.io/clarity_CC_doc
  Source = https://github.com/claritychallenge/clarity
license = MIT
keywords = machine learning, challenges, speech-enhancement, hearing-aids
classifiers=
    Intended Audience :: Developers,
    Intended Audience :: Education
    Intended Audience :: Hearing Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Natural Language :: English


[options]
python_requires = >=3.7

zip_safe = False

packages = find:

install_requires =
  audioread>=2.1.9
  hydra-core>=1.1.1
  hydra-submitit-launcher>=1.1.6
  importlib-metadata
  librosa>=0.8.1
  matplotlib>=3.5.1
  numpy>=1.21.6
  omegaconf>=2.1.1
  pandas>=1.3.5
  pyloudnorm>=0.1.0
  scikit-learn>=1.0.2
  scipy>=1.7.3
  SoundFile>=0.10.3.post1
  tqdm>=4.62.3

[options.extras_require]
tests =
  isort
  flake8
  mypy
  pre-commit
  pytest
  pytest-cov
  pytest-mpl
  pytest-regtest
  yamllint

docs =
  sphinx
  myst_parser
  numpydoc
  pydata_sphinx_theme
  sphinx_markdown_tables
  sphinx_rtd_theme
  sphinxcontrib-mermaid

dev =
  black
  coverage
  flake8
  flake8-print
  isort
  mypy
  pre-commit
  pycodestyle
  pytest
  pytest-regtest
  pytest-cov
  yamllint

[flake8]
ignore = E203, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B9

[options.packages.find]
exclude = tests*

[coverage:run]
omit =
  *conftest.py
  *tests*
  **/__init__*

# FIXME : Is an entry_point required (https://setuptools.pypa.io/en/latest/userguide/entry_point.html)
# [options.entry_points]
# console_scripts =
#   find_pg = clarity