[metadata]
name = pyclarity
# version = 0.1.0
description = Tools for the Clarity Challenge
long_description = file: README.md,
long_description_content_type = text/markdown
author = The PyClarity team
author_email = clarity-group@sheffield.ac.uk
url = https://github.com/claritychallenge/clarity
project_urls=
  Bug Tracker = https://github.com/claritychallenge/clarity/issues
  Documentation = https://claritychallenge.github.io/clarity_CC_doc
  Source = https://github.com/claritychallenge/clarity
license = MIT
keywords = machine learning, challenges, speech-enhancement, hearing-aids
classifiers=
    Intended Audience :: Developers
    Intended Audience :: Education
#    Intended Audience :: Hearing Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Natural Language :: English


[options]
python_requires = >=3.7

zip_safe = False

include_package_data = True

packages = find:

install_requires =
  audioread>=2.1.9
  gdown
  hydra-core==1.1.1
  hydra-submitit-launcher>=1.1.6
  importlib-metadata
  librosa>=0.8.1
  matplotlib
  numpy>=1.21.6
  omegaconf>=2.1.1
  pandas>=1.3.5
  pyloudnorm>=0.1.0
  pystoi
  scikit-learn>=1.0.2
  scipy>=1.7.3
  SoundFile>=0.10.3.post1
  torch
  torchaudio
  tqdm>=4.62.3
  typing_extensions

[options.extras_require]
tests =
  isort
  flake8
  mypy
  pre-commit
  pytest
  pytest-cov
  pytest-mpl
  pytest-regtest
  yamllint

docs =
  sphinx
  myst_parser
  pydata_sphinx_theme
  sphinx_markdown_tables
  sphinx_rtd_theme
  sphinxcontrib-mermaid
  sphinxcontrib-napoleon

dev =
  black
  coverage
  flake8
  flake8-print
  isort
  mypy
  pre-commit
  pycodestyle
  pytest
  pytest-regtest
  pytest-cov
  yamllint

pypi =
  build
  versioneer

[options.package_data]

* = *.mat, *.yaml

[flake8]
ignore = E203, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B9

[options.packages.find]
exclude = tests*

[coverage:run]
omit =
  *conftest.py
  *tests*
  **/__init__*
source =
    clarity

# FIXME : Is an entry_point required (https://setuptools.pypa.io/en/latest/userguide/entry_point.html)
# [options.entry_points]
# console_scripts =

[versioneer]
VCS = git
style = pep440
versionfile_source = clarity/_version.py
versionfile_build = clarity/_version.py
tag_prefix = pyclarity-
parentdir_prefix = pyclarity-